<resources>
    <string name="app_name">Taskly - تاسكلي</string>
    <string name="choose_language">Choose Language</string>
    <string name="close_app">Exit App</string>
    <string name="sub_close_app">Do you want to exit the app?</string>
    <string name="main_text"><![CDATA[Task Management & \n To-Do List]]></string>
    <string name="sub_Text_main">This productive tool is designed to help \n you better manage your tasks \n project-wise conveniently!</string>
    <string name="btn_start">Let’s Start</string>
    <string name="edit_task">Edit Task</string>
    <string name="hint_edit_task">Please edit the task</string>
    <string name="btn_time">Set Time</string>
    <string name="add_task">Add Task</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="delete_task">Delete Task</string>
    <string name="sub_delete_task">Do you want to delete this task?</string>
    <string name="toast_delete_task">Task deleted successfully</string>
    <string name="choose_time">Choose Time</string>
    <string name="error_name_task">Please enter the task name</string>
    <string name="error_choose_time">Please set a time</string>
    <string name="done_task">Task added successfully</string>
</resources>